Them api cho phan chat